2002-10-04  Rob Browning  <rlb@defaultvalue.org>

	* tests/numbers.test ("expt"): add tests.

2002-09-09  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (dist-hook): Do not distribute CVS directories.
	Thanks to Greg Troxel!

2002-08-06  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* tests/reader.test: change misc-error in read-error.

2002-07-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/goops.test: Added tests for define-generic and
	define-accessor.

2002-07-13  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tests/goops.test: Added tests for define-class.

2002-05-07  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/numbers.test (/): Expect divison by an inexact zero to
	yield +inf.0.

2002-05-06  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/regexp.test (regexp-substitute/global): Do not test with
	empty regexp.  Empty regexps do not work on NetBSD.

	* tests/syncase.test (basic syncase macro): Added.

2002-04-26  Marius Vollmer  <mvo@zagadka.ping.de>

	* tests/srfi-13.test (string-tokenize): Updated for fixed
	semantics.

2002-04-16  Marius Vollmer  <mvo@zagadka.ping.de>

	* Makefile.am (SCM_TESTS_DIRS, dist-hook): New, distribute
	directories manually.

2002-02-09  Thien-Thi Nguyen  <ttn@giblet.glug.org>

	* guile-test (main): Handle `--flag-unresolved'.  No longer set
	exit value to #f unconditionally on UNRESOLVED results.
	(for-each-file): Do not recurse into "CVS" or "RCS" subdirs.

2002-02-08  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/elisp.test: Add tests of Elisp expression evaluation.

2002-01-25  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/load.test: New test; for search-path with Elisp
	nil-terminated lists for PATH and EXTENSIONS.

	* tests/elisp.test: More tests for Scheme primitives that should
	accept Elisp nil-terminated lists.

2002-01-24  Neil Jerram  <neil@ossau.uklinux.net>

	* tests/elisp.test: More new tests for the Elisp nil value.

2002-01-22  Neil Jerram  <neil@ossau.uklinux.net>

	* Makefile.am (SCM_TESTS): Added elisp.test.