@@ -20,6 +20,7 @@ SCM_TESTS = tests/alist.test			\
 	    tests/multilingual.nottest		\
 	    tests/numbers.test			\
 	    tests/optargs.test			\
+	    tests/options.test			\
 	    tests/ports.test			\
 	    tests/r4rs.test			\
 	    tests/reader.test			\
