@@ -1,0 +1,30 @@
+;;;; options.test --- test suite for options interface -*- scheme -*-
+;;;;
+;;;; 	Copyright (C) 2002 Free Software Foundation, Inc.
+;;;; 
+;;;; This program is free software; you can redistribute it and/or modify
+;;;; it under the terms of the GNU General Public License as published by
+;;;; the Free Software Foundation; either version 2, or (at your option)
+;;;; any later version.
+;;;; 
+;;;; This program is distributed in the hope that it will be useful,
+;;;; but WITHOUT ANY WARRANTY; without even the implied warranty of
+;;;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;;;; GNU General Public License for more details.
+;;;; 
+;;;; You should have received a copy of the GNU General Public License
+;;;; along with this software; see the file COPYING.  If not, write to
+;;;; the Free Software Foundation, Inc., 59 Temple Place, Suite 330,
+;;;; Boston, MA 02111-1307 USA
+
+(use-modules (test-suite lib))
+
+(with-test-prefix "options"
+
+  (pass-if "setting an option doesn't reset other options"
+	   (let ()
+	     (debug-enable 'backwards)
+	     (debug-set! maxdepth 555)
+	     (if (memq 'backwards (debug-options)) #t #f)))
+
+  )
