@@ -1,3 +1,7 @@
+2002-11-06  Neil Jerram  <neil@ossau.uklinux.net>
+
+	* tests/options.test: New.
+
 2002-10-04  Rob Browning  <rlb@defaultvalue.org>
 
 	* tests/numbers.test ("expt"): add tests.
